# notification-api

./: .dockerignore  .env.devcontainer  .env.enc  .env.enc.aws  .env.example  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .talismanrc  ADMIN_CHANGES_REQUIRED.md  Brewfile  Brewfile.lock.json  CHANGELOG.md  DATAFLOW.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  TYPE_HINTS_GUIDE.md  TYPE_HINTS_SOLUTION.md  application.py  catalog-info.yaml  celerybeat-schedule.db  cloudbuild-test.yaml  cloudbuild.yaml  docker-compose.yml  gevent_otel_worker.py  gunicorn_config.py  mypy.ini  new_tests  newrelic.ini  pii-wrapping-at-entrypoint.md  pull_request_template.md  pyproject.toml  (+15 more)
.devcontainer/: DbDockerfile  Dockerfile  dev-notif-entrypoint.sh  devcontainer.json  devcontainer.local.example.json  docker-compose.yml
.github/: CODEOWNERS  codeql.yml  copilot-instructions.md  cypress.yaml  dependabot.yml  emass.json  main.workflow  pull_request_template.md  release.yaml
app/: README.md  __init__.py  annotations.py  annual_limit_utils.py  bounce_rate.py  cloudfoundry_config.py  commands.py  commands_depricated.py  config.py  config_loader.py  constants.py  cronitor.py  db.py  db_type.py  dbsetup.py  email_limit_utils.py  encryption.py  errors.py  exceptions.py  feature_flags.py  history_meta.py  json_encoder.py  json_provider.py  marshmallow_client.py  models.py  otel_celery_metrics.py  otel_request_metrics.py  queue.py  rate_limiter.py  response_models.py  schema_types.py  schema_utils.py  schemas.py  sms_fragment_utils.py  type_definitions.py  types.py  utils.py  variables.py  version.py
cd/: cluster.tf  container_definition.json.tpl  database.tf  development-backend.hcl  loadbalancer.tf  main.tf  monitoring.tf  provider.tf  roles.tf  route_tables.tf  service.tf  staging-backend.hcl
certs/: DigiCert-Global-G2-TLS-RSA-SHA256-2020-CA1.cer  VA-Internal-S2-ICA10.cer  VA-Internal-S2-ICA12.cer  VA-Internal-S2-ICA13.cer  VA-Internal-S2-ICA14.cer  VA-Internal-S2-ICA16.cer  VA-Internal-S2-ICA17.cer  VA-Internal-S2-ICA18.cer  VA-Internal-S2-ICA19.cer  VA-Internal-S2-ICA20.cer  VA-Internal-S2-ICA21.cer  VA-Internal-S2-ICA4.cer  VA-Internal-S2-ICA4.crt  VA-Internal-S2-ICA9.cer
ci/: .docker-env.example  .local.env  Dockerfile  Dockerfile.datadog  Dockerfile.lambda  Dockerfile.lambda_python_new_relic  Dockerfile.local  Dockerfile.newrelic.lambda  Dockerfile.statsD  Dockerfile.test  Dockerfile.userflow  README.md  cloudbuild-builder.yaml  cloudbuild-master.yaml  cloudbuild-statsd.yaml  cloudbuild-test.yaml  docker-compose-ci.yml  docker-compose-local-migrate.yml  docker-compose-local-readwrite.yml  docker-compose-local.yml  docker-compose-test.yml  docker-compose-user-flow.yml  docker-compose.yml  localstack_setup.sh
custom_checks/: custom_cert_expiration_check.py  custom_cert_expiration_check.yaml
cypress/: config.js  cypress.config.js  package-lock.json  package.json
datadog/: datadog.yml
docs/: openapi_implementation.md  renovate-agent-setup.md
documents/: cds-to-va-changes.md  ci cd flow.puml  contact-info-lookup-error-cases.md  contact-info-lookup-sequence-diagram.puml  get-pinpoint-status-diagram 2.puml  get-pinpoint-status-diagram.puml  github-oauth2-sequence-diagram.puml  send-email-sequence-diagram.puml
heartbeat/: Dockerfile  execute_heartbeat.sh  heartbeat.py  requirements_for_heartbeat.txt
lambda_functions/: readme.md  user_flows_handler.py  user_flows_lambda.py
load_testing/: .envrc.example  README.md  locustfile.py  requirements.txt  requirements_cli.txt  send_email_load_test.py  send_notification_load_test.py  send_sms_cli.py  send_sms_load_test.py
local/: Dockerfile
migrations/: 0428_add_organisation_notes.py  0491_add_service_deact_template.py  Dockerfile  env.py
openapi/: build.py  split.py  v2-notifications-api-en.yaml  v2-notifications-api-fr.yaml  v2-notifications-api.yaml
profresults/: cmprof.py  run-gprof.sh
scripts/: bootstrap.sh  callManifestsRollout.sh  check_celery.sh  cwcheck.sh  datadog_expose_task_arn.sh  delete_sqs_queues.py  ecs_run.sh  fix_migrations.py  generate-types.sh  generate_openapi_spec.py  generate_types.py  import-va-certs.sh  increment_tag.sh  manage_sqs_queues.py  push_git_tag.sh  renovate_agent.py  resign_database.py  run_app.sh  run_celery.ps1  run_celery.sh  run_celery_beat.ps1  run_celery_beat.sh  run_celery_beat_local.sh  run_celery_core_tasks.sh  run_celery_delivery.sh  run_celery_email.sh  run_celery_exit.sh  run_celery_local.sh  run_celery_nightly.sh  run_celery_no_sending.sh  run_celery_no_sms_sending.sh  run_celery_periodic.sh  run_celery_purge.sh  run_celery_receipts.sh  run_celery_report_tasks.sh  run_celery_send_email.sh  run_celery_send_sms.sh  run_celery_send_sms_fair.sh  run_celery_send_sms_ratelimit.sh  run_celery_sms.ps1  (+17 more)
tests/: README.md  __init__.py  conftest.py  env_vars  test_ci_trigger.py  test_queue_callback_strategy.py  test_renovate_agent.py  test_webhook_callback_strategy.py
tests-perf/: README.md  append_phone_numbers.sh
tests-perf-tier2/: .env.example  README.md  locust.conf  tier2_config.py  utils.py
tests-simulate-prod-data/: .env.example  Makefile  README.md  generate.py  requirements.txt  sim_config.py
tests-smoke/: common.py  smoke_test.py  test_admin_csv.py  test_admin_email_csv.py  test_admin_email_one_off.py  test_admin_one_off.py  test_admin_sms_csv.py  test_admin_sms_one_off.py  test_api_bulk.py  test_api_email.py  test_api_email_bulk.py  test_api_sms.py  test_api_sms_bulk.py
tests_cypress/: README  config.js  cypress.config.js  package-lock.json  package.json  seed_db.py
tests_nightly_performance/: .env.example  Dockerfile  README.md  blast_api.py  common.py  email_send_rate.py  execute_and_publish_performance_test.sh  locust.conf  mypy.ini  run_failure_scenarios.sh  sms_send_rate.py
tests_smoke/: .env.example  README.md  common.py  send_many.py  smoke_loop.py  smoke_test.py  test_admin_csv.py  test_admin_email_csv.py  test_admin_email_one_off.py  test_admin_one_off.py  (+8 more)
(+1536 files in other folders)
