[tool.black]
line-length = 130
target-version = ['py310']
include = '(app|migrations|tests)/.*\.pyi?$'

[tool.poetry]
name = "notification-api"
version = "0.1.0"
description = "Public-facing REST API for Notification built on the GOV.UK Notify platform."
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[tool.poetry.scripts]
notify-api = ""

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10.9"
apig-wsgi = "2.18.0"
boto = "2.49.0"
cffi = "1.17.0"
celery = {extras = ["sqs"], version = "5.4.0"}
docopt = "0.6.2"
environs = "9.5.0" # pyup: <9.3.3 # marshmallow v3 throws errors"
fido2 = "0.9.3"
Flask-Bcrypt = "1.0.1"
Flask-Migrate = "2.7.0"
Flask-SQLAlchemy = { git = "https://github.com/pallets-eco/flask-sqlalchemy.git", rev = "500e732dd1b975a56ab06a46bd1a20a21e682262"}
#git+https://github.com/mitsuhiko/flask-sqlalchemy.git@500e732dd1b975a56ab06a46bd1a20a21e682262#egg=Flask-SQLAlchemy==2.3.2.dev20190108
Flask = "2.3.3"
click-datetime = "0.2"
gevent = "23.9.1"

gunicorn = "20.1.0"
iso8601 = "2.1.0"
jsonschema = "3.2.0"
marshmallow-sqlalchemy = "0.30.0"
marshmallow = "3.22.0"
python-magic = "0.4.27"
psycopg2-binary = "2.9.9"
PyJWT = "2.9.0"
pytz = "2021.3"
PyYAML = "6.0.1"

cachelib = "0.12.0"
SQLAlchemy = "1.4.52"
newrelic = "8.10.0"
notifications-python-client = "6.4.1"
python-dotenv = "1.0.1"
pwnedpasswords = "2.0.0"
tldextract = "3.5.0"
nanoid = "2.0.0"
unidecode = "1.3.8"
more-itertools = "8.14.0"
# PaaS
awscli-cwlogs = "1.4.6"
aws-embedded-metrics = "1.0.8"
# Putting upgrade on hold due to new version introducing breaking changes
Werkzeug = "3.0.4"
MarkupSafe = "2.1.5"
# REVIEW: v2 is using sha512 instead of sha1 by default (in v1)
itsdangerous = "2.2.0"
notifications-utils = { git = "https://github.com/cds-snc/notifier-utils.git", tag = "52.3.6" }

# rsa = "4.9  # awscli 1.22.38 depends on rsa<4.8
typing-extensions = "4.12.2"
greenlet = "2.0.2"
simple-salesforce = "^1.12.3"

# Pinned dependencies
certifi = "^2024.0.0" # pinned for security reasons: https://github.com/cds-snc/notification-api/security/dependabot/119
idna = "2.10" # pinned to align with test moto dependency requirements (for <=2.9)
flask-marshmallow = "0.14.0"
aws-xray-sdk = "2.14.0"

[tool.poetry.group.test.dependencies]
flake8 = "6.1.0"
isort = "5.13.2"
moto = "4.2.14"
idna = "2.10"
pytest = "7.4.4"
pytest-env = "0.8.2"
pytest-mock = "3.14.0"
pytest-cov = "3.0.0"
coveralls = "3.3.1"
pytest-xdist = "2.5.0"
freezegun = "1.5.1"
requests-mock = "1.12.1"
# optional requirements for jsonschema
strict-rfc3339 = "0.7"
rfc3987 = "1.3.8"
# used for creating manifest file locally
jinja2-cli = { extras = ["yaml"], version = "0.8.2" }
black = "23.12.1"
locust = "2.31.3"
mypy = "1.5"
sqlalchemy-stubs = "0.4"
sqlalchemy2-stubs = "0.0.2a38"
networkx = "2.8.8" # not directly required, pinned by Snyk to avoid a vulnerability
pytest-mock-resources = { extras = ["redis"], version = "2.12.0" }
types-boto = "2.49.18.9"
types-mock = "4.0.15.2"
types-python-dateutil = "2.9.0.20240316"
types-pytz = "2022.7.1.2"
types-requests = "2.32.0.20240712"
types-redis = "4.6.0.20240425"
