[tool.poetry]
name = "notification-api"
description = "VA Enterprise Notification Platform"
authors = [
    "VA Notify <vanotify@va.gov>",
]
readme = "README.md"
package-mode = false
requires-poetry = "2.1.3"

[tool.poetry.dependencies]
python = "~3.10"
# 3.11.16 is the most current but causes failures. Other versions were yanked. Fixed with issue #2386
aiohttp = "3.11.12"
alembic-utils = "*"
Authlib = "*"
boto3 = "*"
botocore = "*"
cachelib = "*"
cachetools = "*"
celery = {extras = ["sqs"], version = "5.4.0"}
click-datetime = "*"
ddtrace = "*"
docopt = "*"
fido2 = "*"
Flask = "*"
Flask-Bcrypt = "*"
Flask-JWT-Extended = "*"
flask-marshmallow = "*"
Flask-Migrate = "*"
Flask-SQLAlchemy = "*"
gunicorn = "*"
iso8601 = "*"
itsdangerous = "*"
jsonschema = "*"
kombu = "~5.4.2"
marshmallow = "~3.26.1"
marshmallow-sqlalchemy = "~1.1.1"
nanoid = "*"
notifications-python-client = "*"
phonenumbers = "*"
psycopg2-binary = "*"
pwnedpasswords = "*"
PyJWT = "*"
pypdf = "*"
python-dotenv = "*"
python-magic = "*"
rfc3339-validator = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
SQLAlchemy = "^1.4"
twilio = "*"
Unidecode = "*"
validatesns = "*"
Werkzeug = "*"
notification-utils = {git = "https://github.com/department-of-veterans-affairs/notification-utils.git"}

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
freezegun = "*"
google-cloud-bigquery = "*"
moto = "*"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-mock = "*"
pytest-xdist ="*"
requests-mock = "*"
rfc3987 = "*"
strict-rfc3339 = "*"

[tool.poetry.group.static_tools]
optional = true
[tool.poetry.group.static_tools.dependencies]
ruff = "*"
pre-commit = "*"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

line-length = 120
indent-width = 4
target-version = "py310"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "C901"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true  # https://docs.astral.sh/ruff/settings/#format-docstring-code-format
# docstring-code-line-length = "dynamic"  # https://docs.astral.sh/ruff/settings/#format-docstring-code-line-length
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # https://bandit.readthedocs.io/en/latest/plugins/b101_assert_used.html

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
